fix: обновил заполнение полей в классах